src/objects/OrderApi__Scheduled_Payment_Line__c.object
<CustomObject>
    <description>Scheduled Payment Lines track the Items associated with Scheduled Payment.</description>
    <fields>
        <fullName>OrderApi__Activation_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Calculate_Activation_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Valid if the SPL is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</description>
        <inlineHelpText>** System Calculated Override ** Valid if the SPL is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</inlineHelpText>
        <label>Auto Calculate Activation Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the related Business Group.</description>
        <inlineHelpText>**System Calculated/Override** Link to the related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__End_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Required/Override** Link to the related GL Account.</description>
        <inlineHelpText>**System Calculated/Required/Override** Link to the related GL Account.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Invoice Line.</description>
        <inlineHelpText>Link to the related Invoice Line.</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the related line that is being used for renewal.</description>
        <inlineHelpText>Defines the related line that is being used for renewal.</inlineHelpText>
        <label>Is Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Shipping_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the Scheduled Payment Line that is being used for shipping.</description>
        <inlineHelpText>Defines the Scheduled Payment Line that is being used for shipping.</inlineHelpText>
        <label>Is Shipping Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the Scheduled Payment Line that is being used for tax rate.</description>
        <inlineHelpText>Defines the Scheduled Payment Line that is being used for tax rate.</inlineHelpText>
        <label>Is Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Item Class</description>
        <inlineHelpText>Link to related Item Class</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Item.</description>
        <inlineHelpText>Link to related Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__List_Price__c</fullName>
        <description>**System Calculated** The value of the &quot;Price&quot; field for the related Item.</description>
        <formula>OrderApi__Item__r.OrderApi__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** The value of the &quot;Price&quot; field for the related Item.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will derive the Sale Price from the most appropriate Price Rule. Default checked.</description>
        <inlineHelpText>When checked, the system will derive the Sale Price from the most appropriate Price Rule. Default checked.</inlineHelpText>
        <label>Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Price_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to related Price Rule applied for the related Item.</description>
        <inlineHelpText>**System Calculated/Override** Link to related Price Rule applied for the related Item.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>OrderApi__Price_Rule__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>**Required** Quantity of Items. Default 1.</description>
        <inlineHelpText>**Required** Quantity of Items. Default 1.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sale_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**System Calculated/Override** The Sale Price (per unit) for the related Item. Default 0.00.</description>
        <inlineHelpText>**System Calculated/Override** The Sale Price (per unit) for the related Item. Default 0.00.</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Sales Order Line.</description>
        <inlineHelpText>Link to the related Sales Order Line.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Scheduled_Payment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to parent Scheduled Payment Line.</description>
        <inlineHelpText>Link to parent Scheduled Payment Line.</inlineHelpText>
        <label>Scheduled Payment Line</label>
        <referenceTo>OrderApi__Scheduled_Payment_Line__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Scheduled_Payment__c</fullName>
        <description>Link to the related Scheduled Payment.</description>
        <inlineHelpText>Link to the related Scheduled Payment.</inlineHelpText>
        <label>Scheduled Payment</label>
        <referenceTo>OrderApi__Scheduled_Payment__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Scheduled Payment Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</description>
        <inlineHelpText>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Scheduled Payment Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Subscription that is being upgraded or renewed.</description>
        <inlineHelpText>Link to the Subscription that is being upgraded or renewed.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Scheduled Payment Lines</relationshipLabel>
        <relationshipName>Scheduled_Payment_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subtotal__c</fullName>
        <description>**System Calculated** Quantity * Sale Price</description>
        <formula>OrderApi__Quantity__c * OrderApi__Sale_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Quantity * Sale Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to override any tax calculations by the system.</description>
        <inlineHelpText>This field is used to override any tax calculations by the system.</inlineHelpText>
        <label>Tax Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Percent__c</fullName>
        <description>Combined with the Parent Scheduled Payment Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</description>
        <inlineHelpText>Combined with the Parent Scheduled Payment Line&apos;s Sales Price, this field is used to calculate the tax amount for the related item.</inlineHelpText>
        <label>Tax Percent</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderApi__Total__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>**Required** The amount (currency) for payment for the Scheduled Payment Line. Default value is 0.00.</description>
        <inlineHelpText>**Required** The amount (currency) for payment for the Scheduled Payment Line. Default value is 0.00.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Scheduled Payment Line</label>
    <nameField>
        <displayFormat>SPL-{000000}</displayFormat>
        <label>Scheduled Payment Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Payment Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>